--- a/start.html
+++ b/start.html
@@ -1,10 +1,11 @@
 <html>
   <header>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
   </header>
 
-  <body>
-    <h1>At MOMent</h1>
+  <body class  = "homeBack">
+    <h1 class= "homeToPic">At MoMent</h1>
     <script>
       //url : https://teratail.com/questions/100320
       //現在の日時を読み込む
@@ -28,6 +29,7 @@
     <a href="https://placehold.jp/150x150.png" download="test.png" class = "buttons">download</a>
 
     <a href = "" class = "buttons">reload</a>
+
   </body>
 
 </html>
